--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "notiflix": "^3.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.10.1",
     "react-loader-spinner": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
+    "react-toastify": "^9.1.3",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
